# umara

./: .gitignore  CHANGELOG.md  LICENSE  LLMS.txt  README.md  package-lock.json  pyproject.toml  pytest.ini  test_advanced_components.py  test_all_components.py  test_button_simple.py  test_comprehensive.py  test_data_components.py  test_interactive.py  test_more_components.py
.github/workflows/: ci.yml
benchmarks/: __init__.py  core.py  run_all.py
docs/: UMARA_COMPLETE_REFERENCE.md  UMARA_LLM_REFERENCE.md
examples/: ai_streaming_demo.py  chat_demo.py  components_showcase.py  dashboard_demo.py  demo_app.py  settings_demo.py  v060_features_demo.py
tests/: __init__.py  conftest.py  test_cache.py  test_cli.py  test_components.py  test_connections.py  test_core.py  test_fragments.py  test_integration.py  test_state.py  test_style.py  test_themes.py
tests/visual/: test_01_typography.py  test_02_feedback.py  test_03_layout.py  test_04_inputs_basic.py  test_05_inputs_advanced.py  test_06_data_display.py  test_07_chat.py  test_08_navigation.py  test_09_containers.py  test_10_display.py  test_11_charts.py  test_12_media.py  test_13_utility.py  test_batch1_typography_feedback.py  test_batch2_input_widgets1.py  test_batch3_input_widgets2.py  test_batch4_layout.py  test_batch5_data_display.py  test_batch6_charts_media.py  test_batch7_navigation_chat.py  test_batch8_utility.py  test_chat.py  test_modal_only.py  test_simple_layout.py
umara/: __init__.py  ai.py  cache.py  cli.py  components.py  connection.py  connections.py  core.py  diff.py  fragments.py  frontend.py  logging.py  server.py  state.py  style.py  themes.py  upload.py  validation.py
umara_frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
umara_frontend/src/: App.tsx
umara_frontend/src/components/: Alert.tsx  Button.tsx  Checkbox.tsx  ComponentRenderer.tsx  DataDisplay.tsx  DataTable.tsx  Divider.tsx  Input.tsx  Layout.tsx  Media.tsx  (+4 more)
(+3 files in other folders)
