[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "umara"
version = "0.5.1"
description = "A beautiful, modern Python framework for creating web UIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Umara Team" }
]
keywords = ["ui", "web", "framework", "dashboard", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "watchfiles>=0.21.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
]

[project.scripts]
umara = "umara.cli:main"

[project.urls]
Homepage = "https://github.com/lhassa8/umara"
Documentation = "https://github.com/lhassa8/umara#readme"
Repository = "https://github.com/lhassa8/umara"

[tool.hatch.build.targets.wheel]
packages = ["umara"]

[tool.hatch.build.targets.sdist]
include = [
    "/umara",
    "/umara_frontend/dist",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N818"]
